--- a/UnB-CIC.cls
+++ b/UnB-CIC.cls
@@ -915,7 +915,7 @@
 	\@PosTextualNaoInclusofalse%
     \postextual%
 	\bibliographystyle{babunsrt}%
-    \bibliography{bibliografia}%
+    \bibliography{mendeley_v2}%
 }%
 
 
