--- a/monografia.tex
+++ b/monografia.tex
@@ -9,38 +9,39 @@
 % \documentclass[engenharia]{UnB-CIC}%
 \documentclass[qualificacao,mestrado,ppca]{UnB-CIC}%
 
-\usepackage{pdfpages}% incluir PDFs, usado no apêndice
+%\usepackage{pdfpages}% incluir PDFs, usado no apêndice
 
 
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 % Informações do Trabalho
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
-\orientador{\prof \dr Guilherme Novaes Ramos}{CIC/UnB}%
+%\orientador{\prof \dr Guilherme Novaes Ramos}{CIC/UnB}%
 %\coorientador{\prof \dr José Ralha}{CIC/UnB}
-\coordenador[a]{\prof[a] \dr[a] Ada Lovelace}{Bibliothèque universelle de Genève}%
-\diamesano{24}{dezembro}{2014}%
+%\coordenador[a]{\prof[a] \dr[a] Ada Lovelace}{Bibliothèque universelle de Genève}%
+%\diamesano{24}{dezembro}{2014}%
 
-\membrobanca{\prof \dr Donald Knuth}{Stanford University}%
-\membrobanca{\dr Leslie Lamport}{Microsoft Research}%
+%\membrobanca{\prof \dr Donald Knuth}{Stanford University}%
+%\membrobanca{\dr Leslie Lamport}{Microsoft Research}%
 
-\autor{Guilherme N.}{Ramos}%
+%\autor{Guilherme N.}{Ramos}%
 
-\titulo{UnB-CIC: Uma classe em LaTeX para textos do Departamento de Ciência da Computação}%
+%\titulo{UnB-CIC: Uma classe em LaTeX para textos do Departamento de Ciência da Computação}%
 
-\palavraschave{LaTeX, metodologia científica, trabalho de conclusão de curso}%
-\keywords{LaTeX, scientific method, thesis}%
+%\palavraschave{LaTeX, metodologia científica, trabalho de conclusão de curso}%
+%\keywords{LaTeX, scientific method, thesis}%
 
-\newcommand{\unbcic}{\texttt{UnB-CIC}}%
+%\newcommand{\unbcic}{\texttt{UnB-CIC}}%
 
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 % Texto
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 \begin{document}%
-    \capitulo{1_Introducao}{Introdução}%
-    \capitulo{2_UnB-CIC}{A Classe \unbcic}%
-    \capitulo{3_TCC}{Trabalho de Conclusão de Curso}%
-    \capitulo{4_Apresentacao}{Apresentações}%
+    %\capitulo{1_Introducao}{Introdução}%
+    Teste. ~\cite{Braz2015YGRAINELEIBOVICH}
+    %\capitulo{2_UnB-CIC}{A Classe \unbcic}%
+    %\capitulo{3_TCC}{Trabalho de Conclusão de Curso}%
+    %\capitulo{4_Apresentacao}{Apresentações}%
 
-    \apendice{Apendice_Fichamento}{Fichamento de Artigo Científico}%
-    \anexo{Anexo1}{Documentação Original \unbcic\ (parcial)}%
+    %\apendice{Apendice_Fichamento}{Fichamento de Artigo Científico}%
+    %\anexo{Anexo1}{Documentação Original \unbcic\ (parcial)}%
 \end{document}%
