--- a/bibliografia.bib
+++ b/bibliografia.bib
@@ -39,7 +39,7 @@
 
 @book{newton1833philosophiae,
   title={Philosophiae naturalis principia mathematica},
-  author={Newton, Isaac and Bernoulli, Daniel and MacLaurin, Colin and Euler, Leonhard},
+  author={NewtonR, Isaac and Bernoulli, Daniel and MacLaurin, Colin and Euler, Leonhard},
   volume={1},
   year={1833},
   publisher={excudit G. Brookman; impensis TT et J. Tegg, Londini}
