--- a/mendeley_v2.bib
+++ b/mendeley_v2.bib
@@ -18,6 +18,23 @@
     title = {{Disserta{\c{c}}{\~{a}}o de Alex Trindade Barbosa}}
 }
 
+@article{EduardaAmorim2004OsContemporaneo,
+    title = {{Os novos rumos do individualismo e o desamparo do sujeito contempor{\^{a}}neo}},
+    year = {2004},
+    author = {Eduarda Amorim, Claudia and Luciana, Garcia and Coutinho, Gageiro},
+    pages = {125--140}
+}
+
+@article{Vasconcelos2010PROGRAMABRASIL,
+    title = {{PROGRAMA NACIONAL DE ASSIST{\^{E}}NCIA ESTUDANTIL: UMA AN{\'{A}}LISE DA EVOLU{\c{C}}{\~{A}}O DA ASSIST{\^{E}}NCIA ESTUDAN- TIL AO LONGO DA HIST{\'{O}}RIA DA EDUCA{\c{C}}{\~{A}}O SUPERIOR NO BRASIL}},
+    year = {2010},
+    author = {Vasconcelos, Natalia Batista},
+    number = {2},
+    pages = {599--616},
+    volume = {17},
+    keywords = {Assistance, National, Program of, Public politics, Student, Student assistance}
+}
+
 @article{Guedes2017UniversidadeInstitucionais,
     title = {{Universidade de Bras{\'{i}}lia Centro de Estudos Avan{\c{c}}ados Multidisciplinares Programa de P{\'{o}}s-Gradua{\c{c}}{\~{a}}o em Desenvolvimento, Sociedade e Coopera{\c{c}}{\~{a}}o Internacional Evas{\~{a}}o no ensino superior brasileiro: riscos e arranjos institucionais}},
     year = {2017},
