--- a/monografia.tex
+++ b/monografia.tex
@@ -37,7 +37,7 @@
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 \begin{document}%
     %\capitulo{1_Introducao}{Introdução}%
-    Teste. ~\cite{Braz2015YGRAINELEIBOVICH}
+    Testefasdfasfasfasf. ~\cite{EduardaAmorim2004OsContemporaneo}
     %\capitulo{2_UnB-CIC}{A Classe \unbcic}%
     %\capitulo{3_TCC}{Trabalho de Conclusão de Curso}%
     %\capitulo{4_Apresentacao}{Apresentações}%
