--- a/mendeley_v2.bib
+++ b/mendeley_v2.bib
@@ -2,10 +2,13 @@
     title = {{2017{\_}Em{\'{i}}liadeOliveiraFaria}}
 }
 
-@article{LegislacaoAPratica2013ANDREAPARENTE,
-    title = {{ANDR{\'{E}}A PINTO GRA{\c{C}}A PARENTE}},
-    year = {2013},
-    author = {Legisla{\c{c}}{\~{a}}o {\`{A}} Pr{\'{a}}tica, Da and da Concei{\c{c}}{\~{a}}o da Silva Freitas, Maria}
+@article{Santos2016AWork,
+    title = {{A Pol{\'{i}}tica de Assist{\^{e}}ncia Estudantil na Universidade P{\'{u}}blica Brasileira: desafios para o Servi{\c{c}}o Social / The Student Assistance Policy in Brazilian Public University: challenges to Social Work}},
+    year = {2016},
+    journal = {Textos {\&} Contextos (Porto Alegre)},
+    author = {Santos, Claudia Priscila Chupel dos and Marafon, Nelize Moscon},
+    doi = {10.15448/1677-9509.2016.2.22232},
+    issn = {1677-9509}
 }
 
 @article{GuilhermeDinizIrffi2017ANTONIOO,
@@ -14,15 +17,61 @@
     author = {Guilherme Diniz Irffi, Orientador}
 }
 
+@article{Freitas2015AVALIACAOEDUCACIONAL,
+    title = {{AVALIA{\c{C}}{\~{A}}O DA ASSIST{\^{E}}NCIA ESTUDANTIL: POSSIBILIDADES E LIMITES DE UMA POL{\'{I}}TICA P{\'{U}}BLICA EDUCACIONAL}},
+    year = {2015},
+    author = {Freitas, Aline and Pinheiro, Dias}
+}
+
+@article{Vieira2016AVALIACAOBRASILIA,
+    title = {{AVALIA{\c{C}}{\~{A}}O E IMPORT{\^{A}}NCIA DOS PROGRAMAS DE ASSIST{\^{E}}NCIA ESTUDANTIL DA UNIVERSIDADE DE BRAS{\'{I}}LIA}},
+    year = {2016},
+    author = {Vieira, Pedro and Silva, Da}
+}
+
+@article{MarreiroBarbosa2013DESEMPENHOHEMOGLOBINA,
+    title = {{DESEMPENHO ACAD{\^{E}}MICO DE UNIVERSIT{\'{A}}RIOS: ASSOCIA{\c{C}}{\~{A}}O ENTRE ESTADO NUTRICIONAL, INGEST{\~{A}}O DIET{\'{E}}TICA DE FERRO ALIMENTAR E CONCENTRA{\c{C}}ÕES DE HEMOGLOBINA}},
+    year = {2013},
+    journal = {J. Food Nutr},
+    author = {Marreiro Barbosa, Amanda and Matos Alves, Adriana and Braga, Yendis and Macedo De Carvalho, Galvão and Freires De Oliveira Costa, Ivone and Maria, Cecília and Gon{\c{c}}alves De Carvalho, Resende},
+    number = {2},
+    pages = {217--223},
+    volume = {24},
+    issn = {2179-4448}
+}
+
+@article{Machado2016DireitoUniversitarios,
+    title = {{Direito ou benef{\'{i}}cio? Pol{\'{i}}tica de assist{\^{e}}ncia estudantil e seus efeitos subjetivos aos universit{\'{a}}rios}},
+    year = {2016},
+    journal = {Estudos de Psicologia},
+    author = {Machado, Jardel Pelissari and Pan, Miriam Aparecida Graciano de Souza},
+    doi = {10.5935/1678-4669.20160046},
+    issn = {1678-4669}
+}
+
 @article{DissertacaoBarbosa,
     title = {{Disserta{\c{c}}{\~{a}}o de Alex Trindade Barbosa}}
 }
 
-@article{EduardaAmorim2004OsContemporaneo,
-    title = {{Os novos rumos do individualismo e o desamparo do sujeito contempor{\^{a}}neo}},
-    year = {2004},
-    author = {Eduarda Amorim, Claudia and Luciana, Garcia and Coutinho, Gageiro},
-    pages = {125--140}
+@article{CarolinaLilideAssis2013EstaUNIVERSITIES,
+    title = {{Esta obra est{\'{a}} sob uma Licen{\c{c}}a Creative Commons Atribui{\c{c}}{\~{a}}o-Uso. AS POL{\'{I}}TICAS DE ASSIST{\^{E}}NCIA ESTUDANTIL: EXPERI{\^{E}}NCIAS COMPARADAS EM UNIVERSIDADES P{\'{U}}BLICAS BRASILEIRAS STUDENT ASSISTANCE POLICIES: COMPARED EXPERIENCES IN BRAZILIAN PUBLIC UNIVERSITIES}},
+    year = {2013},
+    author = {Carolina Lili de Assis, Anna and Tanure Sanabio, Marcos and Alves Magaldi, Carolina and Silva Machado, Carla},
+    number = {4},
+    pages = {125--146},
+    volume = {6},
+    url = {www.gual.ufsc.br},
+    doi = {10.5007/1983-4535.2013v6n4p125}
+}
+
+@article{Bleicher2016PoliticasFederais,
+    title = {{Pol{\'{i}}ticas de assist{\^{e}}ncia estudantil em sa{\'{u}}de nos institutos e universidades federais}},
+    year = {2016},
+    journal = {Psicologia Escolar e Educacional},
+    author = {Bleicher, Taís and de Oliveira, Raquel Campos Nepomuceno},
+    doi = {10.1590/2175-3539/2015/02031040},
+    issn = {21753539},
+    keywords = {Health, Higher education, Public policies}
 }
 
 @article{Vasconcelos2010PROGRAMABRASIL,
@@ -35,6 +84,12 @@
     keywords = {Assistance, National, Program of, Public politics, Student, Student assistance}
 }
 
+@article{SilvaMachadoSistemaEducation,
+    title = {{Sistema de cotas, trajet{\'{o}}rias educacionais e assist{\^{e}}ncia estudantil: por uma educa{\c{c}}{\~{a}}o inclusiva The quota system, educational background and student assistance: towards an inclusive education}},
+    author = {Silva Machado, Carla and Magaldi, Carolina Alves},
+    doi = {10.14244/198271991567}
+}
+
 @article{Guedes2017UniversidadeInstitucionais,
     title = {{Universidade de Bras{\'{i}}lia Centro de Estudos Avan{\c{c}}ados Multidisciplinares Programa de P{\'{o}}s-Gradua{\c{c}}{\~{a}}o em Desenvolvimento, Sociedade e Coopera{\c{c}}{\~{a}}o Internacional Evas{\~{a}}o no ensino superior brasileiro: riscos e arranjos institucionais}},
     year = {2017},
@@ -44,18 +99,6 @@
 @article{2015UNIVERSIDADEBrasilia,
     title = {{UNIVERSIDADE DE BRAS{\'{I}}LIA FACULDADE DE EDUCA{\c{C}}{\~{A}}O MESTRADO PROFISSIONAL EM EDUCA{\c{C}}{\~{A}}O GEST{\~{A}}O DE POL{\'{I}}TICAS E SISTEMAS EDUCACIONAIS AMANDA VELOSO BARBOSA SOBREVIVER E/OU ME GRADUAR? OS LIMITES DO PROGRAMA AUX{\'{I}}LIO SOCIOECON{\^{O}}MICO DA UNIVERSIDADE DE BRAS{\'{I}}LIA DO PONTO DE VISTA DE SEUS/SUAS BENEFICI{\'{A}}RIOS/AS Bras{\'{i}}lia}},
     year = {2015}
-}
-
-@article{Vieira2016UNIVERSIDADEPUBLICA,
-    title = {{UNIVERSIDADE DE BRAS{\'{I}}LIA – UnB FACULDADE UNB DE PLANALTINA – FUP PROGRAMA DE P{\'{O}}S-GRADUA{\c{C}}{\~{A}}O EM GEST{\~{A}}O P{\'{U}}BLICA – PPGP MESTRADO PROFISSIONAL EM GEST{\~{A}}O P{\'{U}}BLICA}},
-    year = {2016},
-    author = {Vieira, Pedro and Silva, Da}
-}
-
-@article{Freitas2015UNIVERSIDADEPUBLICAS,
-    title = {{UNIVERSIDADE FEDERAL DO CEAR{\'{A}} PR{\'{O}}-REITORIA DE PESQUISA E P{\'{O}}S-GRADUA{\c{C}}{\~{A}}O MESTRADO EM AVALIA{\c{C}}{\~{A}}O DE POL{\'{I}}TICAS P{\'{U}}BLICAS}},
-    year = {2015},
-    author = {Freitas, Aline and Pinheiro, Dias}
 }
 
 @article{Braz2015YGRAINELEIBOVICH,
