--- a/monografia.tex
+++ b/monografia.tex
@@ -30,14 +30,12 @@
 %\palavraschave{LaTeX, metodologia científica, trabalho de conclusão de curso}%
 %\keywords{LaTeX, scientific method, thesis}%
 
-%\newcommand{\unbcic}{\texttt{UnB-CIC}}%
-
-%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
+%\newcommand{\unbcic}{\texttt{UnB-CIC}\cite{SilvaMachadoSistemaEducation}%%%%
 % Texto
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 \begin{document}%
     %\capitulo{1_Introducao}{Introdução}%
-    Testefasdfasfasfasf. ~\cite{EduardaAmorim2004OsContemporaneo}
+    Citações: \cite{SilvaMachadoSistemaEducation}, \cite{2017_EmiliadeOliveiraFaria}, \cite{Vieira2016AVALIACAOBRASILIA}.
     %\capitulo{2_UnB-CIC}{A Classe \unbcic}%
     %\capitulo{3_TCC}{Trabalho de Conclusão de Curso}%
     %\capitulo{4_Apresentacao}{Apresentações}%
