--- a/tex/2_UnB-CIC.tex
+++ b/tex/2_UnB-CIC.tex
@@ -107,7 +107,8 @@ Os seguintes arquivos são exigidos:
     \item[tex/agradecimentos.tex] Contém os agradecimentos do autor.%
     \item[bibliografia.bib] Contém as referências bibliográficas no formato
     ${\mathrm{B{\scriptstyle{IB}}T_{\displaystyle E}X}}$\footnote{\url{http://www.bibtex.org}}.%
-    %\item[tex/capitulo1.tex] Contém o primeiro capítulo.%
+    %rogerio
+    \item[tex/capitulo1.tex] Contém o primeiro capítulo.%
     \item[tex/dedicatoria.tex] Contém a dedicatória do autor.%
     \item[tex/siglas.tex] Contém as definições de siglas/abreviaturas.%
     \item[tex/resumo.tex] Contém o resumo do texto.%
