--- a/monografia.tex
+++ b/monografia.tex
@@ -15,17 +15,17 @@
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 % Informações do Trabalho
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
-%\orientador{\prof \dr Guilherme Novaes Ramos}{CIC/UnB}%
+\orientador{\prof[a] \dr[a] Xxxxx X Xxxxx}{FACE/UnB}%
 %\coorientador{\prof \dr José Ralha}{CIC/UnB}
-%\coordenador[a]{\prof[a] \dr[a] Ada Lovelace}{Bibliothèque universelle de Genève}%
-%\diamesano{24}{dezembro}{2014}%
+\coordenador[a]{\prof[a] \dr[a] Xxxxx X Xxxxx}{Bibliothèque universelle de Genève}%
+\diamesano{24}{maio}{2018}%
 
 %\membrobanca{\prof \dr Donald Knuth}{Stanford University}%
 %\membrobanca{\dr Leslie Lamport}{Microsoft Research}%
 
-%\autor{Guilherme N.}{Ramos}%
+\autor{Rogério G.}{Sampaio - Matrícula: 180006240}%
 
-%\titulo{UnB-CIC: Uma classe em LaTeX para textos do Departamento de Ciência da Computação}%
+\titulo{O AUXÍLIO ALIMENTAÇÃO COMO FORMA DE ASSISTÊNCIA ESTUDANTIL: ANÁLISE DE IMPACTO NO RENDIMENTO ACADÊMICO DOS DISCENTES}%
 
 %\palavraschave{LaTeX, metodologia científica, trabalho de conclusão de curso}%
 %\keywords{LaTeX, scientific method, thesis}%
@@ -34,7 +34,7 @@
 % Texto
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 \begin{document}%
-    %\capitulo{1_Introducao}{Introdução}%
+    \capitulo{1_Introducao}{Introdução}%
     Citações: \cite{SilvaMachadoSistemaEducation}, \cite{2017_EmiliadeOliveiraFaria}, \cite{Vieira2016AVALIACAOBRASILIA}.
     %\capitulo{2_UnB-CIC}{A Classe \unbcic}%
     %\capitulo{3_TCC}{Trabalho de Conclusão de Curso}%
