--- a/monografia.tex
+++ b/monografia.tex
@@ -34,12 +34,13 @@
 % Texto
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 \begin{document}%
-    \capitulo{1_Introducao}{Introdução}%
-    Citações: \cite{SilvaMachadoSistemaEducation}, \cite{2017_EmiliadeOliveiraFaria}, \cite{Vieira2016AVALIACAOBRASILIA}.
+    %\capitulo{1_Introducao}{Introdução}%
     %\capitulo{2_UnB-CIC}{A Classe \unbcic}%
     %\capitulo{3_TCC}{Trabalho de Conclusão de Curso}%
     %\capitulo{4_Apresentacao}{Apresentações}%
 
     %\apendice{Apendice_Fichamento}{Fichamento de Artigo Científico}%
     %\anexo{Anexo1}{Documentação Original \unbcic\ (parcial)}%
+    \capitulo{0_estruturaTemp}{}%
+ 
 \end{document}%
