--- a/monografia.tex
+++ b/monografia.tex
@@ -17,7 +17,7 @@
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 \orientador{\prof[a] \dr[a] Xxxxx X Xxxxx}{FACE/UnB}%
 %\coorientador{\prof \dr José Ralha}{CIC/UnB}
-\coordenador[a]{\prof[a] \dr[a] Xxxxx X Xxxxx}{Bibliothèque universelle de Genève}%
+\coordenador[a]{\prof[a] \dr[a] Joana Farias}{Bibliothèque universelle de Genève}%
 \diamesano{24}{maio}{2018}%
 
 %\membrobanca{\prof \dr Donald Knuth}{Stanford University}%
