--- a/mendeley_v2.bib
+++ b/mendeley_v2.bib
@@ -1,32 +1,44 @@
-@article{2017_EmiliadeOliveiraFaria,
-    title = {{2017{\_}Em{\'{i}}liadeOliveiraFaria}}
-}
-
-@article{Santos2016AWork,
-    title = {{A Pol{\'{i}}tica de Assist{\^{e}}ncia Estudantil na Universidade P{\'{u}}blica Brasileira: desafios para o Servi{\c{c}}o Social / The Student Assistance Policy in Brazilian Public University: challenges to Social Work}},
+@article{Santos2016ASocial,
+    title = {{A Pol{\'{i}}tica de Assist{\^{e}}ncia Estudantil na Universidade P{\'{u}}blica Brasileira: desafios para o Servi{\c{c}}o Social}},
     year = {2016},
     journal = {Textos {\&} Contextos (Porto Alegre)},
     author = {Santos, Claudia Priscila Chupel dos and Marafon, Nelize Moscon},
-    doi = {10.15448/1677-9509.2016.2.22232},
-    issn = {1677-9509}
+    doi = {10.15448/1677-9509.2016.2.22232}
 }
 
-@article{GuilhermeDinizIrffi2017ANTONIOO,
-    title = {{ANT{\^{O}}NIO S{\'{E}}RGIO RIBEIRO PINHO AN{\'{A}}LISE DO PROGRAMA DE ASSIST{\^{E}}NCIA ESTUDANTIL SOBRE O}},
+@article{SERGIORIBEIROPINHO2017ANALISEFORTALEZA,
+    title = {{AN{\'{A}}LISE DO PROGRAMA DE ASSI ST{\^{E}}NCIA ESTUDANTIL SOBRE O RENDIMENTO ESCOLAR DOS ALUNOS DO  INSTITUTO FEDERAL DO CEAR{\'{A}} – CAMPUS FORTALEZA}},
     year = {2017},
-    author = {Guilherme Diniz Irffi, Orientador}
+    author = {S{\'{E}}RGIO RIBEIRO PINHO, ANTÔNIO}
 }
 
-@article{Freitas2015AVALIACAOEDUCACIONAL,
+@article{CarolinaLilideAssis2013ASBRASILEIRAS,
+    title = {{AS POL{\'{I}}TICAS DE ASSIST{\^{E}} NCIA ESTUDANTIL: EXPERI{\^{E}}NCIAS COMPARADAS EM UNIVERSIDADES P{\'{U}}BLICAS BRASILEIRAS}},
+    year = {2013},
+    author = {Carolina Lili de Assis, Anna and Tanure Sanabio, Marcos and Alves Magaldi, Carolina and Silva Machado, Carla},
+    number = {4},
+    pages = {125--146},
+    volume = {6},
+    url = {www.gual.ufsc.br},
+    doi = {10.5007/1983-4535.2013v6n4p125}
+}
+
+@article{FREITASDIASPINHEIRO2015AVALIACAOEDUCACIONAL,
     title = {{AVALIA{\c{C}}{\~{A}}O DA ASSIST{\^{E}}NCIA ESTUDANTIL: POSSIBILIDADES E LIMITES DE UMA POL{\'{I}}TICA P{\'{U}}BLICA EDUCACIONAL}},
     year = {2015},
-    author = {Freitas, Aline and Pinheiro, Dias}
+    author = {FREITAS DIAS PINHEIRO, ALINE}
 }
 
-@article{Vieira2016AVALIACAOBRASILIA,
-    title = {{AVALIA{\c{C}}{\~{A}}O E IMPORT{\^{A}}NCIA DOS PROGRAMAS DE ASSIST{\^{E}}NCIA ESTUDANTIL DA UNIVERSIDADE DE BRAS{\'{I}}LIA}},
+@article{HARTMANNLEIBOVICH2015AvaliacaoUnB.,
+    title = {{Avalia{\c{c}}{\~{a}}o do consumo alimentar de estudantes frequentadores do Restaurante Universit{\'{a}}rio da UnB.}},
+    year = {2015},
+    author = {HARTMANN LEIBOVICH, YGRAINE}
+}
+
+@article{VIEIRADASILVA2016AVALIACAOUnB,
+    title = {{AVALIA{\c{C}}{\~{A}}O E IMPORT{\^{A}}NCIA DOS PROGRAMAS DE ASSIST{\^{E}}NCIA ESTUDANTIL DA UNIVERSIDADE DE BRAS{\'{I}}LIA – UnB}},
     year = {2016},
-    author = {Vieira, Pedro and Silva, Da}
+    author = {VIEIRA DA SILVA, PEDRO}
 }
 
 @article{MarreiroBarbosa2013DESEMPENHOHEMOGLOBINA,
@@ -49,19 +61,10 @@
     issn = {1678-4669}
 }
 
-@article{DissertacaoBarbosa,
-    title = {{Disserta{\c{c}}{\~{a}}o de Alex Trindade Barbosa}}
-}
-
-@article{CarolinaLilideAssis2013EstaUNIVERSITIES,
-    title = {{Esta obra est{\'{a}} sob uma Licen{\c{c}}a Creative Commons Atribui{\c{c}}{\~{a}}o-Uso. AS POL{\'{I}}TICAS DE ASSIST{\^{E}}NCIA ESTUDANTIL: EXPERI{\^{E}}NCIAS COMPARADAS EM UNIVERSIDADES P{\'{U}}BLICAS BRASILEIRAS STUDENT ASSISTANCE POLICIES: COMPARED EXPERIENCES IN BRAZILIAN PUBLIC UNIVERSITIES}},
-    year = {2013},
-    author = {Carolina Lili de Assis, Anna and Tanure Sanabio, Marcos and Alves Magaldi, Carolina and Silva Machado, Carla},
-    number = {4},
-    pages = {125--146},
-    volume = {6},
-    url = {www.gual.ufsc.br},
-    doi = {10.5007/1983-4535.2013v6n4p125}
+@article{GuedesdaSilva2017EvasaoInstitucionais.,
+    title = {{Evas{\~{a}}o no ensino superior  brasileiro:  riscos e arranjos  institucionais.}},
+    year = {2017},
+    author = {Guedes da Silva, Luciana}
 }
 
 @article{Bleicher2016PoliticasFederais,
@@ -90,19 +93,8 @@
     doi = {10.14244/198271991567}
 }
 
-@article{Guedes2017UniversidadeInstitucionais,
-    title = {{Universidade de Bras{\'{i}}lia Centro de Estudos Avan{\c{c}}ados Multidisciplinares Programa de P{\'{o}}s-Gradua{\c{c}}{\~{a}}o em Desenvolvimento, Sociedade e Coopera{\c{c}}{\~{a}}o Internacional Evas{\~{a}}o no ensino superior brasileiro: riscos e arranjos institucionais}},
-    year = {2017},
-    author = {Guedes, Luciana and Silva, Da}
-}
-
-@article{2015UNIVERSIDADEBrasilia,
-    title = {{UNIVERSIDADE DE BRAS{\'{I}}LIA FACULDADE DE EDUCA{\c{C}}{\~{A}}O MESTRADO PROFISSIONAL EM EDUCA{\c{C}}{\~{A}}O GEST{\~{A}}O DE POL{\'{I}}TICAS E SISTEMAS EDUCACIONAIS AMANDA VELOSO BARBOSA SOBREVIVER E/OU ME GRADUAR? OS LIMITES DO PROGRAMA AUX{\'{I}}LIO SOCIOECON{\^{O}}MICO DA UNIVERSIDADE DE BRAS{\'{I}}LIA DO PONTO DE VISTA DE SEUS/SUAS BENEFICI{\'{A}}RIOS/AS Bras{\'{i}}lia}},
-    year = {2015}
-}
-
-@article{Braz2015YGRAINELEIBOVICH,
-    title = {{YGRAINE HARTMANN LEIBOVICH}},
+@article{VELOSOBARBOSA2015SOBREVIVERBENEFICIARIOS/AS,
+    title = {{SOBREVIVER E/OU ME GRADUAR?  OS LIMITES DO PROGRAMA AUX{\'{I}}LIO SOCIOECON{\^{O}}MICO DA UNIVERSIDADE D E BRAS{\'{I}}LIA DO PONTO DE VISTA DE SEUS/SUAS BENEFICI{\'{A}}RIOS/AS}},
     year = {2015},
-    author = {Braz, Raquel ª and Botelho, Assunção}
+    author = {VELOSO BARBOSA, AMANDA}
 }
