--- a/monografia.tex
+++ b/monografia.tex
@@ -15,7 +15,7 @@
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 % Informações do Trabalho
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
-\orientador{\prof[a] \dr[a] Xxxxx X Xxxxx}{FACE/UnB}%
+\orientador{\prof[a] \dr[a] Krisley Mendes}{FACE/UnB}%
 %\coorientador{\prof \dr José Ralha}{CIC/UnB}
 \coordenador[a]{\prof[a] \dr[a] Joana Farias}{Bibliothèque universelle de Genève}%
 \diamesano{24}{maio}{2018}%
