--- a/tex/0_estruturaTemp.tex
+++ b/tex/0_estruturaTemp.tex
@@ -20,5 +20,17 @@ O objetivo geral do estudo é, assim, analisar, a partir dos dados obtidos do Si
 	\item Sugerir medidas que possibilitem melhor desempenho na implementação da política de assistência estudantil da universidade, no que diz respeito ao alcance dos objetivos a que ela se propõe, se for o caso.
 \end{enumerate}%
 \section{Citações}%
-   Citações: \cite{SilvaMachadoSistemaEducation}, \cite{2017_EmiliadeOliveiraFaria}, 
+   Citações: 
+   \cite{Bleicher2016PoliticasFederais},%
+   \cite{MarreiroBarbosa2013DESEMPENHOHEMOGLOBINA},% 
+   \cite{Santos2016ASocial},% 
+   \cite{Machado2016DireitoUniversitarios},% 
+   \cite{SilvaMachadoSistemaEducation},% 
+   \cite{CarolinaLilideAssis2013ASBRASILEIRAS},% 
+   \cite{VELOSOBARBOSA2015SOBREVIVERBENEFICIARIOS/AS},% 
+   \cite{HARTMANNLEIBOVICH2015AvaliacaoUnB.},% 
+   \cite{GuedesdaSilva2017EvasaoInstitucionais.},% 
+   \cite{SERGIORIBEIROPINHO2017ANALISEFORTALEZA},% 
+   \cite{FREITASDIASPINHEIRO2015AVALIACAOEDUCACIONAL},% 
+   \cite{VIEIRADASILVA2016AVALIACAOUnB},% 
 
