--- a/mendeley_v2.bib
+++ b/mendeley_v2.bib
@@ -1,100 +1,119 @@
-@article{Santos2016ASocial,
-    title = {{A Pol{\'{i}}tica de Assist{\^{e}}ncia Estudantil na Universidade P{\'{u}}blica Brasileira: desafios para o Servi{\c{c}}o Social}},
+@article{Beatriz2007ABrasileiro,
+    title = {{a Evas{\~{a}}o No Ensino Superior Brasileiro}},
+    year = {2007},
+    journal = {Cadernos de Pesquisa},
+    author = {Beatriz, Maria and Melo, D E Carvalho},
+    number = {132},
+    pages = {641--659},
+    volume = {37},
+    keywords = {Ensino superior, evas{\~{a}}o escolar-Brasil}
+}
+
+@article{Veneroso2016AsaaFederal,
+    title = {{Asaa Razões E Influ{\^{e}}ncias Para a Evas{\~{a}}o Universit{\'{a}}ria : Um Estudo Com Estudantes Ingressantes Nos Reasons and Influences for University Evasion : a Study With Students Freshmen in Institutions of Accounting Sciences Courses Public Federal}},
     year = {2016},
-    journal = {Textos {\&} Contextos (Porto Alegre)},
-    author = {Santos, Claudia Priscila Chupel dos and Marafon, Nelize Moscon},
-    doi = {10.15448/1677-9509.2016.2.22232}
+    author = {Veneroso, Jacqueline},
+    pages = {141--161}
 }
 
-@article{SERGIORIBEIROPINHO2017ANALISEFORTALEZA,
-    title = {{AN{\'{A}}LISE DO PROGRAMA DE ASSI ST{\^{E}}NCIA ESTUDANTIL SOBRE O RENDIMENTO ESCOLAR DOS ALUNOS DO  INSTITUTO FEDERAL DO CEAR{\'{A}} – CAMPUS FORTALEZA}},
-    year = {2017},
-    author = {S{\'{E}}RGIO RIBEIRO PINHO, ANTÔNIO}
+@article{Pereira2003DeterminantesPara,
+    title = {{Determinantes Da Evas{\~{a}}o De Alunos E Os Custos Ocultos Para}},
+    year = {2003},
+    author = {Pereira, Fernanda},
+    pages = {173},
+    volume = {1},
+    isbn = {9788578110796},
+    doi = {10.1017/CBO9781107415324.004},
+    issn = {1098-6596},
+    pmid = {25246403},
+    arxivId = {arXiv:1011.1669v3},
+    keywords = {icle}
 }
 
-@article{CarolinaLilideAssis2013ASBRASILEIRAS,
-    title = {{AS POL{\'{I}}TICAS DE ASSIST{\^{E}} NCIA ESTUDANTIL: EXPERI{\^{E}}NCIAS COMPARADAS EM UNIVERSIDADES P{\'{U}}BLICAS BRASILEIRAS}},
-    year = {2013},
-    author = {Carolina Lili de Assis, Anna and Tanure Sanabio, Marcos and Alves Magaldi, Carolina and Silva Machado, Carla},
+@article{Nassar2011Do.,
+    title = {{Do modelo presencial para o modelo a dist{\^{a}}ncia : vari{\'{a}}veis end{\'{o}}genas e os riscos de evas{\~{a}}o nos cursos de gradua{\c{c}}{\~{a}}o .}},
+    year = {2011},
+    journal = {V Congresso Brasileiro de Ensino Superior a Dist{\^{a}}ncia - ESUD},
+    author = {Nassar, Silvia M and Ohira, Masanao and Cislaghi, Renato and Rodrigues, Rosângela S and Catapan, Araci H},
+    number = {July 2015}
+}
+
+@article{Silva2014EvasaoTransacao,
+    title = {{Evas{\~{a}}o e qualidade em institui{\c{c}}{\~{a}}o de ensino superior privadas: uma an{\'{a}}lise da economia dos custos de transa{\c{c}}{\~{a}}o}},
+    year = {2014},
+    journal = {Adminsitra{\c{c}}{\~{a}}o: Ensino e Pesquisa},
+    author = {Silva, Adriano maniçoba da and Sauaia, Antônio Carlos Aidar},
     number = {4},
-    pages = {125--146},
-    volume = {6},
-    url = {www.gual.ufsc.br},
-    doi = {10.5007/1983-4535.2013v6n4p125}
+    pages = {805--830},
+    volume = {15},
+    isbn = {0265-8240},
+    doi = {10.1590/S0104-40362006000300006},
+    issn = {1414-4077}
 }
 
-@article{FREITASDIASPINHEIRO2015AVALIACAOEDUCACIONAL,
-    title = {{AVALIA{\c{C}}{\~{A}}O DA ASSIST{\^{E}}NCIA ESTUDANTIL: POSSIBILIDADES E LIMITES DE UMA POL{\'{I}}TICA P{\'{U}}BLICA EDUCACIONAL}},
-    year = {2015},
-    author = {FREITAS DIAS PINHEIRO, ALINE}
-}
-
-@article{HARTMANNLEIBOVICH2015AvaliacaoUnB.,
-    title = {{Avalia{\c{c}}{\~{a}}o do consumo alimentar de estudantes frequentadores do Restaurante Universit{\'{a}}rio da UnB.}},
-    year = {2015},
-    author = {HARTMANN LEIBOVICH, YGRAINE}
-}
-
-@article{VIEIRADASILVA2016AVALIACAOUnB,
-    title = {{AVALIA{\c{C}}{\~{A}}O E IMPORT{\^{A}}NCIA DOS PROGRAMAS DE ASSIST{\^{E}}NCIA ESTUDANTIL DA UNIVERSIDADE DE BRAS{\'{I}}LIA – UnB}},
-    year = {2016},
-    author = {VIEIRA DA SILVA, PEDRO}
-}
-
-@article{MarreiroBarbosa2013DESEMPENHOHEMOGLOBINA,
-    title = {{DESEMPENHO ACAD{\^{E}}MICO DE UNIVERSIT{\'{A}}RIOS: ASSOCIA{\c{C}}{\~{A}}O ENTRE ESTADO NUTRICIONAL, INGEST{\~{A}}O DIET{\'{E}}TICA DE FERRO ALIMENTAR E CONCENTRA{\c{C}}ÕES DE HEMOGLOBINA}},
-    year = {2013},
-    journal = {J. Food Nutr},
-    author = {Marreiro Barbosa, Amanda and Matos Alves, Adriana and Braga, Yendis and Macedo De Carvalho, Galvão and Freires De Oliveira Costa, Ivone and Maria, Cecília and Gon{\c{c}}alves De Carvalho, Resende},
-    number = {2},
-    pages = {217--223},
-    volume = {24},
-    issn = {2179-4448}
-}
-
-@article{Machado2016DireitoUniversitarios,
-    title = {{Direito ou benef{\'{i}}cio? Pol{\'{i}}tica de assist{\^{e}}ncia estudantil e seus efeitos subjetivos aos universit{\'{a}}rios}},
-    year = {2016},
-    journal = {Estudos de Psicologia},
-    author = {Machado, Jardel Pelissari and Pan, Miriam Aparecida Graciano de Souza},
-    doi = {10.5935/1678-4669.20160046},
-    issn = {1678-4669}
-}
-
-@article{GuedesdaSilva2017EvasaoInstitucionais.,
-    title = {{Evas{\~{a}}o no ensino superior  brasileiro:  riscos e arranjos  institucionais.}},
-    year = {2017},
-    author = {Guedes da Silva, Luciana}
-}
-
-@article{Bleicher2016PoliticasFederais,
-    title = {{Pol{\'{i}}ticas de assist{\^{e}}ncia estudantil em sa{\'{u}}de nos institutos e universidades federais}},
-    year = {2016},
-    journal = {Psicologia Escolar e Educacional},
-    author = {Bleicher, Taís and de Oliveira, Raquel Campos Nepomuceno},
-    doi = {10.1590/2175-3539/2015/02031040},
-    issn = {21753539},
-    keywords = {Health, Higher education, Public policies}
-}
-
-@article{Vasconcelos2010PROGRAMABRASIL,
-    title = {{PROGRAMA NACIONAL DE ASSIST{\^{E}}NCIA ESTUDANTIL: UMA AN{\'{A}}LISE DA EVOLU{\c{C}}{\~{A}}O DA ASSIST{\^{E}}NCIA ESTUDAN- TIL AO LONGO DA HIST{\'{O}}RIA DA EDUCA{\c{C}}{\~{A}}O SUPERIOR NO BRASIL}},
+@article{Vitelli2010EvasaoFenomeno,
+    title = {{Evas{\~{a}}o Em Cursos De Gradua{\c{c}}{\~{a}}o: Fatores Intervenientes No Fen{\^{o}}meno}},
     year = {2010},
-    author = {Vasconcelos, Natalia Batista},
-    number = {2},
-    pages = {599--616},
-    volume = {17},
-    keywords = {Assistance, National, Program of, Public politics, Student, Student assistance}
+    author = {Vitelli, Ricardo Ferreira},
+    pages = {9},
+    keywords = {Abandono, Educa{\c{c}}{\~{a}}o Superior, Evas{\~{a}}o, Regress{\~{a}}o Log{\'{i}}stica}
 }
 
-@article{SilvaMachadoSistemaEducation,
-    title = {{Sistema de cotas, trajet{\'{o}}rias educacionais e assist{\^{e}}ncia estudantil: por uma educa{\c{c}}{\~{a}}o inclusiva The quota system, educational background and student assistance: towards an inclusive education}},
-    author = {Silva Machado, Carla and Magaldi, Carolina Alves},
-    doi = {10.14244/198271991567}
+@article{Gilioli2016EVASAOGilioli,
+    title = {{EVAS{\~{A}}O EM INSTITUI{\c{C}}ÕES FEDERAIS DE ENSINO SUPERIOR NO BRASIL : EXPANS{\~{A}}O DA REDE , SISU E DESAFIOS Renato de Sousa Porto Gilioli}},
+    year = {2016},
+    author = {Gilioli, Renato de Sousa}
 }
 
-@article{VELOSOBARBOSA2015SOBREVIVERBENEFICIARIOS/AS,
-    title = {{SOBREVIVER E/OU ME GRADUAR?  OS LIMITES DO PROGRAMA AUX{\'{I}}LIO SOCIOECON{\^{O}}MICO DA UNIVERSIDADE D E BRAS{\'{I}}LIA DO PONTO DE VISTA DE SEUS/SUAS BENEFICI{\'{A}}RIOS/AS}},
-    year = {2015},
-    author = {VELOSO BARBOSA, AMANDA}
+@article{Pereira2011EvasaoGrosso,
+    title = {{Evas{\~{a}}o na Universidade Federal de Mato Grosso}},
+    year = {2011},
+    journal = {Revista de Estudos Sociais},
+    author = {Pereira, Rosângela Saldanha and Zavala, Arturo Alejandro and Santos, Antônio César},
+    number = {26},
+    pages = {74--86},
+    volume = {13}
+}
+
+@article{Examinadora1994EvasaoConsequencias.,
+    title = {{Evas{\~{a}}o no ensino superior: causas e conseq{\"{u}}{\^{e}}ncias.}},
+    year = {1994},
+    author = {Examinadora, Banca},
+    pages = {251}
+}
+
+@article{Andriola2006OpinioesUFC,
+    title = {{Opiniões de docentes e de coordenadores acerca do fen{\^{o}}meno da evas{\~{a}}o discente dos cursos de gradua{\c{c}}{\~{a}}o da Universidade Federal do Cear{\'{a}} (UFC)}},
+    year = {2006},
+    journal = {Ensaio: Avalia{\c{c}}{\~{a}}o e Pol{\'{i}}ticas P{\'{u}}blicas em Educa{\c{c}}{\~{a}}o},
+    author = {Andriola, Wagner Bandeira and Andriola, Cristiany Gomes and Moura, Cristiane Pascoal},
+    number = {52},
+    pages = {365--382},
+    volume = {14},
+    url = {http://www.scielo.br/scielo.php?script=sci_arttext&pid=S0104-40362006000300006&lng=pt&tlng=pt},
+    doi = {10.1590/S0104-40362006000300006},
+    issn = {0104-4036}
+}
+
+@article{Lobo2012PanoramaSolucoes,
+    title = {{Panorama da Evas{\~{a}}o no Ensino Superior Brasileiro: Aspectos Gerais das Causas e Solu{\c{c}}ões}},
+    year = {2012},
+    journal = {Associa{\c{c}}{\~{a}}o Brasileira de Mantenedoras de Ensino Superior Cadernos},
+    author = {Lobo, Maria Beatriz De Carvalho Melo},
+    number = {08780 220},
+    pages = {1--23},
+    volume = {25}
+}
+
+@article{Catani2006PROUNI:Superior,
+    title = {{PROUNI: democratiza{\c{c}}{\~{a}}o do acesso {\`{a}}s Institui{\c{c}}ões de Ensino Superior?}},
+    year = {2006},
+    journal = {Educar em Revista},
+    author = {Catani, Afrânio Mendes and Hey, Ana Paula and Gilioli, Renato de Sousa Porto},
+    number = {28},
+    pages = {125--140},
+    url = {http://www.scielo.br/scielo.php?script=sci_arttext&pid=S0104-40602006000200009&lng=pt&tlng=pt},
+    isbn = {9789221264637},
+    doi = {10.1590/S0104-40602006000200009},
+    issn = {0104-4060}
 }
