--- a/monografia.tex
+++ b/monografia.tex
@@ -23,7 +23,7 @@
 %\membrobanca{\prof \dr Donald Knuth}{Stanford University}%
 %\membrobanca{\dr Leslie Lamport}{Microsoft Research}%
 
-\autor{Rogério G.}{Sampaio - Matrícula: 180006240}%
+\autor{Tiago M.}{Chagas - Matrícula: 180006436}%
 
 \titulo{O AUXÍLIO ALIMENTAÇÃO COMO FORMA DE ASSISTÊNCIA ESTUDANTIL: ANÁLISE DE IMPACTO NO RENDIMENTO ACADÊMICO DOS DISCENTES}%
 
