--- a/tex/0_estruturaTemp.tex
+++ b/tex/0_estruturaTemp.tex
@@ -1,26 +1,63 @@
 \section{Tema}%
-O AUXÍLIO ALIMENTAÇÃO COMO FORMA DE ASSISTÊNCIA ESTUDANTIL: ANÁLISE DE IMPACTO NO RENDIMENTO ACADÊMICO DOS DISCENTES.
+ANÁLISE DAS EVASÕES DE ALUNOS DOS CURSOS DA UnB: Um estudo no âmbito da graduação e pós-graduação
 
 \section{Problema}%
-A necessidade de avaliar as políticas públicas, com destaque para as que são voltadas para a educação superior. Surge, assim, um anseio de conhecer os resultados das políticas de assistência social especificamente a de auxílio alimentação. A busca desses resultados deve ser contínua e sempre atualizada, deve também considerar a influência de características socioeconômicas e a eficácia do instrumento, com o objetivo de tornar as políticas mais eficientes.
+As altas taxas de evasão de cursos de nível superior no Brasil é um problema a ser estudado e combatido pelas instituições de nível superior. Existem cursos onde o  número de concluintes é absolutamente inferior aos de ingressantes. 
+
+Conseguir prever o desempenho dos alunos durante a vida acadêmica é um desafio para as equipes de planejamento de graduação. Políticas sociais são lançadas e as mesmas devem ser avaliadas para não comprometer o nível intelectual da Universidade.
+
+A necessidade de explorar dados para prever tendências, descobrir padrões e extrair inteligência de dados de um determinado negócio, ou seja, transformar dados em informação é um processo que vem sendo aplicado com  maior frequência pelas grandes instituições para apoio as tomadas de decisões e definição das diretrizes por parte das equipes de planejamento das mesmas.
+
+A intenção do discente em evadir às vezes é conhecida tardiamente impedindo que a gestão da Universidade tome providências para reverter o quadro.
+
+Ao conseguir identificar o risco de um aluno fracassar, ou seja, evadir, com antecedência pode ajudar os gestores da Universidade a elaborar um plano personalizado para mitigação deste risco.
+Para uma melhor compreensão das evasões podemos trabalhar com questionamentos , tais como:
+
+\begin{enumerate} 
+    \begin{itemize}
+        \item	Cursos da área de exatas possuem maior índice de evasões comparados aos da área de humanas?
+        \item	Distância entre Campi e a residência do discente influência na decisão para evadir?
+        \item	Há correlação entre evasões e ingresso pelo programa de cotas?
+        \item	Greve do restaurante Universitário influência a evasão de discentes baixa renda?
+    \end{itemize}%
+\end{enumerate}%
+
+Visto o exposto, a administração das Universidades podem ser mais eficientes para combater este problema conhecendo melhor os motivos pelos quais levam os discentes a desistirem dos cursos.  
+
 
 \section{Objetivos}%
 
 \subsection{Objetivo Geral}
-O objetivo geral do estudo é, assim, analisar, a partir dos dados obtidos do Sistema de Informações Acadêmicas de Graduação (SIGRA) e do Sistema de controle de acesso ao Restaurante Universitários (SISRU), no período de outubro de 2014 a outubro de 2017, se a adesão ou não ao plano de Assistência Estudantil adotada pela Universidade de Brasília foi relevante para o aumento do rendimento acadêmico dos discentes. Os resultados dessa pesquisa devem promover a discussão acerca do assunto e promover uma profunda reflexão sobre tais políticas públicas.
+O objetivo da proposta é um estudo acerca da evasão dos cursos ofertados pela Universidade de Brasília. Comparar os índices de evasões entre os cursos relacionados a dados acadêmicos e pessoais dos alunos com o intuito  de encontrar padrões que possam auxiliar a identificação de possíveis evasões com antecedência. Permitindo assim um trabalho de mitigação dos riscos de fracasso dos mesmos, ou seja, o aluno sair do curso por um motivo diferente de formatura.
+ 
+Para realização do estudo serão usadas como fonte as bases de dados dos sistemas legados da Universidade de Brasília, com enfoque no ciclo de vida acadêmico dos discentes e docentes. Aplicar técnicas de mineração de dados para a descoberta de novos padrões relacionados as diversas formas de evasões dos cursos ofertados pela UnB para que possam prever tendências que  auxiliarão a equipe de planejamento a acompanhar e definir as metas e diretrizes da Universidade no âmbito acadêmico.
+
+Ao identificar se um aluno de um determinado curso corre o risco de fracassar, por exemplo, abandonar o curso, com antecedência é possível tomar providências cabíveis para mitigar ou até mesmo eliminar este risco. Agindo com antecedência é possível elaborar um plano de intervenção personalizado para melhoria do desempenho evitando o abandono e consequentemente o desperdício de dinheiro público no caso da evasão do mesmo.
 
 \subsection{Objetivo específicos}
-\begin{enumerate}
-	\item Obter dados comparativas sobre a política de assistência estudantil alimentar;
-	\item Avaliar a eficácia da política de assistência estudantil alimentar implementada pela Universidade de Brasília;
-	\item Comparar beneficiários e não beneficiários de assistência estudantil alimentar;
-	\item Avaliar o rendimento acadêmico de discentes beneficiados pela assistência ao decorrer do tempo na Universidade de Brasília; 
-	\item Analisar rendimento acadêmico dos alunos no período de outubro de 2014 a outubro de 2017;
-	\item Analisar a evasão dos discentes beneficiados pela assistência estudantil alimentar em comparação com os demais;
-	\item Sugerir medidas que possibilitem melhor desempenho na implementação da política de assistência estudantil da universidade, no que diz respeito ao alcance dos objetivos a que ela se propõe, se for o caso.
+\begin{enumerate} 
+    \begin{itemize}
+        \item	Apresentar a informação de maneira consistente e única;
+        \item	Fomentar as áreas de negócio com informações do estudo para que tomem decisões mais precisas;
+        \item	Padronizar a informação de diversas fontes;
+        \item	Analisar os dados de um determinado período;
+        \item   Comparar a evasão entre os cursos da UnB;
+        \item   Conhecimento dos dados gerados pelos sistemas acadêmicos legados com enfoque nas evasões.
+    \end{itemize}%
 \end{enumerate}%
 \section{Citações}%
    Citações: 
-   \cite{Vitelli2010EvasaoFenomeno},%
+   \cite{Gilioli2016EVASAOGilioli},%
+   \cite{Catani2006PROUNI:Superior}
+   \cite{Andriola2006OpinioesUFC}
+   \cite{Beatriz2007ABrasileiro}
+   \cite{Lobo2012PanoramaSolucoes}
+   \cite{Nassar2011Do.}
+   \cite{Pereira2003DeterminantesPara}
+   \cite{Silva2014EvasaoTransacao}
+   \cite{Veneroso2016AsaaFederal}
+   \cite{Vitelli2010EvasaoFenomeno}
+   \cite{Pereira2011EvasaoGrosso}
+
   
 
